--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
-<div style="display: flex; width: 100%; height: 100vh">
-  <div style="width: 50%;outline: 1px solid #ffd0d0">
-    <input type="text" class="input-area">
+<div style="
+display: flex;
+width: 100%;
+height: 100vh;
+box-sizing: border-box;
+overflow: hidden;">
+  <div style="width: 50%;">
+    <app-editor [formControl]="inputControl"></app-editor>
   </div>
-  <div style="width: 50%;outline: 1px solid #ffd0d0">
-    <app-markdown-view></app-markdown-view>
+  <div style="width: 100%; height: 100%; max-height: 100vh">
+    <div class="markdown-body" [innerHTML]="input$ | async"></div>
   </div>
 </div>
