--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
-<div style="
-display: flex;
-width: 100%;
-height: 100vh;
-box-sizing: border-box;
-overflow: hidden;">
-  <div style="width: 50%;">
-    <app-editor [formControl]="inputControl"></app-editor>
-  </div>
-  <div style="width: 100%; height: 100%; max-height: 100vh">
-    <div class="markdown-body" [innerHTML]="input$ | async"></div>
-  </div>
+<div style="display: flex;width: 100%;height: 100vh;box-sizing: border-box;overflow: hidden;">
+<!--  <div style="width: 50%;">-->
+<!--    <app-editor [formControl]="inputControl"></app-editor>-->
+<!--  </div>-->
+<!--  <div style="width: 100%; height: 100%; max-height: 100vh">-->
+<!--    <div class="markdown-body" [innerHTML]="input$ | async"></div>-->
+<!--  </div>-->
+  <app-preview-container style="height: 400px;"></app-preview-container>
 </div>
