--- a/src/app/components/preview-container/preview-container.component.html
+++ b/src/app/components/preview-container/preview-container.component.html
@@ -1,9 +1,10 @@
-<div class="container">
-  <div class="side left-side">
-    <ng-content select="left"></ng-content>
-  </div>
-  <div class="divider"></div>
-  <div class="side right-side">
-    <ng-content select="right"></ng-content>
-  </div>
+<div class="side left-side" #leftSide>
+  <ng-content select="left"></ng-content>
 </div>
+<div appResizeDivider class="divider"
+     (onMove)="onMove($event, leftSide, rightSide)"
+></div>
+<div class="side right-side" #rightSide>
+  <ng-content select="right"></ng-content>
+</div>
+
