--- a/src/app/components/preview-container/preview-container.component.less
+++ b/src/app/components/preview-container/preview-container.component.less
@@ -1,15 +1,34 @@
-.container {
+
+.preview-container {
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 100%;
   max-height: 100vh;
   overflow: hidden;
-
+  position: relative;
   .side {
     width: 50%;
-    overflow-y: auto;
+    overflow: auto;
     max-height: 100%;
     height: 100%;
+  }
+  .left-side {
+    background: #bcc8ff;
+  }
+  .right-side {
+    background: #bea5fc;
+  }
+  .divider {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    width: 2px;
+    background: black;
+    cursor: ew-resize;
+    &:hover {
+      opacity: 0.5;
+    }
   }
 }
