--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <div style="display: flex;width: 100%;height: 100vh;box-sizing: border-box;overflow: hidden;">
-<!--  <div style="width: 50%;">-->
-<!--    <app-editor [formControl]="inputControl"></app-editor>-->
-<!--  </div>-->
-<!--  <div style="width: 100%; height: 100%; max-height: 100vh">-->
-<!--    <div class="markdown-body" [innerHTML]="input$ | async"></div>-->
-<!--  </div>-->
-  <app-preview-container style="height: 400px;"></app-preview-container>
+  <app-preview-container (onMove)="onMove($event)">
+    <app-editor ngProjectAs="left" [formControl]="inputControl"></app-editor>
+    <div ngProjectAs="right" class="markdown-body" [innerHTML]="input$ | async"></div>
+  </app-preview-container>
 </div>
