--- a/src/app/components/editor/editor.component.html
+++ b/src/app/components/editor/editor.component.html
@@ -1,7 +1,9 @@
-<ngx-monaco-editor
-  style="width: 100%; height: 100%;"
-  [options]="editorOptions"
-  [(ngModel)]="value"
-  (onInit)="onInit($event)"
-  (ngModelChange)="onChange($event)"
-></ngx-monaco-editor>
+<div class="editor-wrapper">
+  <ngx-monaco-editor
+    [options]="editorOptions"
+    [(ngModel)]="value"
+    (onInit)="onInit($event)"
+    (ngModelChange)="onChange($event)"
+  ></ngx-monaco-editor>
+</div>
+
