--- a/src/app/components/preview-container/preview-container.component.less
+++ b/src/app/components/preview-container/preview-container.component.less
@@ -12,12 +12,7 @@
     overflow: auto;
     max-height: 100%;
     height: 100%;
-  }
-  .left-side {
-    background: #bcc8ff;
-  }
-  .right-side {
-    background: #bea5fc;
+    margin-right: 4px;
   }
   .divider {
     position: absolute;
