--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<div style="display: flex;width: 100%;height: 100vh;box-sizing: border-box;overflow: hidden;">
-  <app-preview-container (onMove)="onMove($event)">
-    <app-editor ngProjectAs="left" [formControl]="inputControl"></app-editor>
-    <div ngProjectAs="right" class="markdown-body" [innerHTML]="input$ | async"></div>
-  </app-preview-container>
-</div>
+<app-markdown-editor></app-markdown-editor>
