--- a/src/app/components/preview-container/preview-container.component.less
+++ b/src/app/components/preview-container/preview-container.component.less
@@ -11,19 +11,25 @@
     width: 50%;
     overflow: auto;
     max-height: 100%;
-    height: 100%;
     margin-right: 4px;
   }
   .divider {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 50%;
+    position: relative;
     width: 2px;
     background: black;
     cursor: ew-resize;
     &:hover {
       opacity: 0.5;
+    }
+    &-vt {
+      position: absolute;
+      bottom: 0;
+      top: 0;
+    }
+    &-hz {
+      position: absolute;
+      left: 0;
+      right: 0;
     }
   }
 }
