--- a/src/app/components/markdown-editor/markdown-editor.component.less
+++ b/src/app/components/markdown-editor/markdown-editor.component.less
@@ -1,6 +1,12 @@
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
+}
+.editor-controls {
+  display: flex;
+  padding: 10px 5px;
+  justify-content: flex-end;
 }
