--- a/src/app/components/preview-container/preview-container.component.less
+++ b/src/app/components/preview-container/preview-container.component.less
@@ -13,23 +13,35 @@
     max-height: 100%;
     margin-right: 4px;
   }
+  // todo добавить для горизонтального случая
   .divider {
     position: relative;
-    width: 2px;
-    background: black;
+    width: 5px;
     cursor: ew-resize;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 1px;
+      background: #000000;
+      top: 0;
+      bottom: 0;
+    }
     &:hover {
       opacity: 0.5;
+      &::before {
+        width: 3px;
+      }
     }
     &-vt {
       position: absolute;
       bottom: 0;
       top: 0;
     }
-    &-hz {
-      position: absolute;
-      left: 0;
-      right: 0;
-    }
+    //&-hz {
+    //  position: absolute;
+    //  left: 0;
+    //  right: 0;
+    //}
   }
 }
